# SOMEIP_Beispiel

./: CMakeLists.txt  README.md  server.cpp  server.h  vehicle.cpp  vehicle.h
